# payment-intent-gateway

./: .env  .gitignore  Cargo.toml  README.md
apps/api/: Cargo.toml
apps/api/src/: app_state.rs  error.rs  main.rs
apps/api/src/routes/: mod.rs  payment_intents.rs  provider_webhooks.rs
apps/callback-worker/: Cargo.toml
apps/callback-worker/src/: main.rs
apps/demo-receiver/: Cargo.toml
apps/demo-receiver/src/: main.rs
apps/mock-provider/: Cargo.toml
apps/mock-provider/src/: error.rs  main.rs  models.rs  routes.rs  scheduler.rs  state.rs
apps/operator-ui/: package-lock.json  package.json
apps/operator-ui/app/: globals.css  layout.tsx  page.tsx
apps/operator-ui/app/intents/[id]/: page.tsx
apps/operator-ui/components/: ui.tsx
apps/operator-ui/lib/: format.ts  gateway.ts  types.ts
apps/reconciler/: Cargo.toml
apps/reconciler/src/: main.rs
apps/resolver/: Cargo.toml
apps/resolver/src/: main.rs
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
crates/application/: Cargo.toml
crates/application/src/: callback_delivery.rs  error.rs  lib.rs  payment_execution.rs  payment_intents.rs  provider_webhooks.rs  receipts.rs  reconciliation.rs  unknown_outcomes.rs  worker.rs
crates/domain/: Cargo.toml
crates/domain/src/: attempt.rs  errors.rs  failure.rs  lib.rs  payment_intent.rs  receipt.rs  reconciliation.rs  state.rs  tests.rs  types.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: callback_notifications.rs  db.rs  error.rs  lib.rs  repository.rs  rows.rs  unknown_outcomes.rs  worker_leasing.rs
docs/: demo-scenarios.md  foundation-spec.md  milestone-1-invariants.md  milestone-10-receipt-and-evidence-model-readme.md  milestone-11-reconciliation-engine-readme.md  milestone-12-minimal-operator-surface-readme.md  milestone-13-failure-scenario-demo-suite-readme.md  milestone-2-persistence-readme.md  milestone-3-intent-ingestion-readme.md  milestone-4-worker-foundation-readme.md  milestone-5-mock-provider-readme.md  milestone-6-execution-attempt-logic-readme.md  milestone-7-unknown-outcome-handling-readme.md  milestone-8-provider-webhook-ingestion-readme.md  milestone-9-callback-delivery-engine-readme.md  phase-1-implementation-blueprint.md
migerations/: 0002_add_worker_leasing.sql  0003_add_unknown_outcome_follow_up.sql
migrations/: 0001_init_payment_gateway.sql  0004_add_callback_delivery_engine.sql
scripts/: run-demo-scenario.ps1
