[package]
name = "payment-intent-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
domain = { path = "crates/domain" }
hex = "0.4"
persistence = { path = "crates/persistence" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }

[workspace]
members = [
    "crates/domain",
    "crates/persistence",
    "crates/application",
    "apps/api", 
    "apps/worker",

]
resolver = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
