[package]
name = "callback-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../../crates/application" }
persistence = { path = "../../crates/persistence" }

chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
